--- a/期末复习资料/市场营销/2018市场营销复习.md
+++ b/期末复习资料/市场营销/2018市场营销复习.md
@@ -12,7 +12,7 @@
 3. 恩格尔系数与基尼系数  
 恩格尔系数：食品支出总额占个人消费支出总额的比重。  
 基尼系数(A/(A+B))：用以衡量一个国家或地区居民收入差距的常用指标。如果A为零，基尼系数为零，表示收入分配完全平等；如果B为零则系数为1，收入分配绝对不平等。  
-![](基尼系数.jpg)
+![基尼系数](基尼系数.jpg)
  
 4. 企业所处的环境分为宏观环境、微观环境  
 宏观环境：PEST（Politics政治、Economy经济、Society社会、Technology技术）
@@ -25,7 +25,7 @@
 明星产品（Stars）：高增长，高市场份额  
 现金流产品（Cash Cows）：低增长，高市场份额  
 瘦狗型产品（Dogs)：低增长，低市场份额  
-![](BCG.jpg)
+![BCG矩阵](BCG.jpg)
 
 7. 顾客满意是什么：当商品的实际消费效果达到消费者的预期时，即顾客感知大于期望，就导致了满意；否则，则会导致顾客不满意  
 顾客让渡价值：是指企业转移的，顾客感受得到的实际价值。  
@@ -87,4 +87,7 @@
 
 - SWOT理论：优势、劣势、机会、威胁
 
-本作品采用知识共享署名 4.0 国际许可协议进行许可。
+---
+![知识共享许可协议](https://i.creativecommons.org/l/by/4.0/88x31.png)
+
+本作品采用[知识共享署名 4.0 国际许可协议](http://creativecommons.org/licenses/by/4.0/)进行许可。
